Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Microsoft Xbox 1.3
Description
AGP to PCI bridge has uninitialized data in the PCI BAR registers, so the pci.sys driver is not able to enumerate its children (which is the Xbox GPU device).
(drivers/bus/pci/pdo.c:777) Device 10de:01b7 (class 0x06) at 0:30:0 is a bridge
|
(drivers/bus/pci/pdo.c:955) Device 10de:01b7 (class 0x06) at 0:30:0 is a bridge -> setting bus number #1/#1
|
(hal/halx86/legacy/bus/sysbus.c:109) Translation of bcfaf7e4 failed!
|
(ntoskrnl/io/pnpmgr/pnpres.c:1017) Failed to translate port resource (Start: 0xbcfaf7e4)
|
(ntoskrnl/io/pnpmgr/pnpres.c:1179) Failed to translate resources for PCI\VEN_10DE&DEV_01B7&SUBSYS_F8BFEF87&REV_A1\2&b3ac4ede&1E
|
It's not a major issue, since we're able to get video output anyway.
This happens only on real hardware Xbox. On the emulator these BAR registers are zeroed out.
Debug log: debug.log
Attachments
Issue Links
- blocks
-
CORE-17643 VGAPnP (formerly VBE) driver causes KiTrap06Handler unrecoverable error on Xbox
-
- Open
-
- relates to
-
CORE-16317 Video adapter initialization problem on Xbox
-
- Resolved
-
-
CORE-16319 Bad PCI bridge: UNEXPECTED_KERNEL_MODE_TRAP bugcheck on real hardware Xbox
-
- Resolved
-