[XBOX][FREELDR] Initialize PCI-AGP bridge BAR values

This fixes problem with Xbox GPU not being detected as a children device.

CORE-17600 CORE-16216